@@ -1,3 +1,5 @@
+5/23/11 Removed custom FrameSetup (same as phetcommon default)
+5/23/11 Rewrote main to use standardized PhetApplicationLauncher initialization method
 # 1.04.00 (52282) May 21, 2011
 5/21/11 > added new translation credits features
 # 1.03.31 (52209) May 19, 2011
